@@ -31,7 +31,6 @@ public enum DiagnosticContext {
     public static final String THREAD_ID = "thread_id";
     private static final String UNSET = "UNSET";
 
-
     // This is thread-safe.
     @SuppressFBWarnings("SE_BAD_FIELD_STORE")
     private transient final ThreadLocal<IRequestContext> REQUEST_CONTEXT_THREAD_LOCAL =
