@@ -51,13 +51,13 @@ ext {
     daggerCompilerVersion = "2.31.2"
     msal4jVersion = "1.10.0"
     mseberaApacheHttpClientVersion = "4.5.8"
-    moshiVersion = "1.12.0"
-    moshiAdaptersVersion = "1.12.0"
+    moshiVersion = "1.14.0"
+    moshiAdaptersVersion = "1.14.0"
     openpojoVersion = "0.9.1"
     equalsVerifierVersion = "3.6.1"
     jsonGeneratorVersion = "0.4.7"
     jsonSchemaFriendVersion = "0.12.2"
-    jsonVersion = "20200518"
+    jsonVersion = "20231013"
     junitJupiterEngineVersion = "5.7.2"
     junitVintageEngineVersion = "5.7.2"
     dbusJavaVersion = "3.3.0"
