@@ -46,7 +46,7 @@ public class LoadLabUserTestRule implements TestRule {
 
     private static final String TAG = LoadLabUserTestRule.class.getSimpleName();
 
-    public static final long TEMP_USER_WAIT_TIME = TimeUnit.SECONDS.toMillis(25);
+    public static final long TEMP_USER_WAIT_TIME = TimeUnit.SECONDS.toMillis(35);
 
     private LabQuery query;
     private TempUserType tempUserType;
